--- a/app.json
+++ b/app.json
@@ -13,15 +13,15 @@
   },
   "tabBar": {
     "list": [{
-      "pagePath": "/pages/home/home",
+      "pagePath": "pages/home/home",
       "text": "主页",
-      "iconPath": "iconPath",
-      "selectedIconPath": "selectedIconPath"
+      "iconPath": "/assest/home.png",
+      "selectedIconPath": "/assest/home1.png"
     },{
-      "pagePath": "/pages/image/image",
+      "pagePath": "pages/image/image",
       "text": "图片",
-      "iconPath": "iconPath",
-      "selectedIconPath": "selectedIconPath"
+      "iconPath": "/assest/image.png",
+      "selectedIconPath": "/assest/image1.png"
     }]
   },
   "style": "v2",
